# rocos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  ISSUE.md  README.md  auto_linux.sh
Client/: CMakeLists.txt  Client.qrc  Client.rc  build.sh  build_win64.sh  qtquickcontrols2.conf
Client/cmake/modules/: Findtoluapp.cmake
Client/images/: example.html
Client/plugins/sim/: CMakeLists.txt  configwidget.cpp  configwidget.h  logger.cpp  robot.cpp  robot.h  sslworld.cpp  sslworld.h
Client/plugins/sim/physics/: pball.cpp  pball.h  pbox.cpp  pbox.h  pcylinder.cpp  pcylinder.h  pfixedbox.cpp  pfixedbox.h  pground.cpp  pground.h  pobject.cpp  pobject.h  pworld.cpp  pworld.h
Client/src/: actionmodule.cpp  actionmodule.h  actionmodule_nan.cpp  communicator.cpp  communicator.h  debugger.cpp  debugger.h  display.cpp  display.h  documenthandler.cpp  documenthandler.h  field.cpp  field.h  globaldata.cpp  globaldata.h  globalsettings.cpp  globalsettings.h  interaction.cpp  interaction.h  interaction4field.cpp  interaction4field.h  main.cpp  messageinfo.cpp  messageinfo.h  networkinterfaces.cpp  networkinterfaces.h  paraminterface.cpp  paraminterface.h  rec_player.cpp  rec_player.h  rec_recorder.cpp  rec_recorder.h  rec_slider.cpp  rec_slider.h  refereebox.cpp  refereebox.h  refereethread.cpp  refereethread.h  remotesim.cpp  remotesim.h  (+8 more)
Client/src/qml/: ControlBoard.qml  Document.qml  RefereeBox.qml  Settings.qml  Viewer.qml  ZButton.qml  ZComboBox.qml  ZGroupBox.qml  ZRefButton.qml  ZRobot.qml  ZSwitch.qml  ZValue.qml  main.qml
Client/src/utils/: matrix2d.cpp  matrix2d.h  setthreadname.cpp  treeitem.cpp  treeitem.h
Client/src/vision/: ballrecords.h  ballstate.cpp  ballstate.h  chipsolver.cpp  chipsolver.h  collisiondetect.cpp  collisiondetect.h  dealball.cpp  dealball.h  dealrobot.cpp  dealrobot.h  kalmanfilter.cpp  kalmanfilter.h  kalmanfilterdir.cpp  kalmanfilterdir.h  maintain.cpp  maintain.h  messageformat.h  montage.cpp  montage.h  visionmodule.cpp  visionmodule.h
Client/src/vision/log/: file_format.h  file_format_legacy.cpp  file_format_legacy.h  file_format_timestamp_type_size_raw_message.cpp  file_format_timestamp_type_size_raw_message.h  log_file.cpp  log_file.h  log_slider.cpp  log_slider.h  logeventlabel.cpp  logeventlabel.h  message_type.h  player.cpp  player.h  timer.cpp  timer.h
Controller/: .gitignore  CMakeLists.txt  CrazyNaN.pro  t1_zh.ts
Controller/src/: main.cpp  radiopacket.cpp  radiopacket.h  serialobject.cpp  serialobject.h  settings.hpp  singleton.hpp  udp24l01object.cpp  udp24l01object.h  udpwifiobject.cpp  udpwifiobject.h
Controller/src/lib/crc/: crc.h
Controller/src/lib/share/: auto.sh  zss_cmd.proto  zss_cmd_type.proto
Controller/src/qml/: LeftThumbstick.qml  ZText.qml  main.qml
Core/: .gitignore  CMakeLists.txt
Core/src/Algorithm/: BallSpeedModel.cpp  BallSpeedModel.h  BallStatus.cpp  BallStatus.h  CollisionDetect.cpp  ContactChecker.cpp  ContactChecker.h  ballmodel.cpp  runtimepredictor.cpp  runtimepredictor.h
Core/src/LuaModule/: LuaModule.cpp  LuaModule.h  TrainEnv.pkg  ballspeedmodel.pkg  dribblestatus.pkg  gamestate.pkg  gdebugengine.pkg  geometry.pkg  global.pkg  kickstatus.pkg  munkres.pkg  skillapi.pkg  taskmediator.pkg  utils.pkg  visionmodule.pkg  worlddefine.pkg  worldmodel.pkg  zeus.pkg
Core/src/Main/: ActionModule.cpp  ActionModule.h  DecisionModule.cpp  DecisionModule.h  Global.cpp  Global.h  OptionModule.cpp  OptionModule.h  TaskMediator.h  zeus_main.cpp
Core/src/MotionControl/: CMmotion.cpp  CMmotion.h  ControlModel.cpp  ControlModel.h  CubicEquation.h  DynamicsSafetySearch.cpp  DynamicsSafetySearch.h  QuadraticEquation.cpp  QuarticEquation.cpp  TrapezoidalVelTrajectory.cpp  TrapezoidalVelTrajectory.h  noneTrapzodalVelTrajectory.cpp
Core/src/OtherLibs/cmu/: constants.h  fast_alloc.h  obstacle.cpp  obstacle.h  path_planner.h  vector.h
Core/src/OtherLibs/cornell/: Trajectory.h  TrajectoryStructs.cpp  TrajectoryStructs.h  TrajectorySupport.cpp
Core/src/PathPlan/: KDTreeNew.cpp  KDTreeNew.h  ObstacleNew.cpp  ObstacleNew.h  PathPlanner.cpp  PredictTrajectory.cpp  RRTPathPlanner.cpp  Stack.h
Core/src/RefereeBox/: RefereeBoxIf.cpp  RefereeBoxIf.h  playmode.h  referee_commands.h
Core/src/Simulator/: CommandInterface.cpp  CommandInterface.h  ServerInterface.h  server.h
Core/src/Strategy/: PlayerTask.cpp  PlayerTask.h  register.h  registry.h  skill_registry.h  skillapi.cpp  skillapi.h
Core/src/Strategy/rolematch/: matrix.cpp  matrix.h  munkres.h
Core/src/Strategy/skill/: BasicPlay.h  Factory.cpp  Factory.h  GetBall.cpp  GetBall.h  Goalie.cpp  Goalie.h  GotoPosition.cpp  GotoPosition.h  OpenSpeed.cpp  OpenSpeed.h  PlaceBall.cpp  PlaceBall.h  PlayerTask.cpp  PlayerTask.h  SmartGotoPosition.cpp  SmartGotoPosition.h  Speed.cpp  Speed.h  StopRobot.cpp  StopRobot.h  Touch.cpp  Touch.h
Core/src/Utils/: BufferCounter.cpp  BufferCounter.h  ClassFactory.h  GDebugEngine.cpp  GDebugEngine.h  MultiThread.h  Semaphore.h  misc_types.h  utils.cpp  utils.h  weerror.h
Core/src/Vision/: BallPredictor.cpp  BallPredictor.h  CollisionSimulator.h  RobotPredictor.cpp  RobotPredictor.h  RobotsCollision.h  VisionModule.cpp  VisionModule.h  VisionReceiver.h
Core/src/Wireless/: CommandFactory.h  PlayerCommand.h  PlayerCommandV2.cpp  PlayerCommandV2.h  RobotSensor.cpp  RobotSensor.h  SerialPort.h
Core/src/WorldModel/: DribbleStatus.h  KickStatus.h  PlayInterface.cpp  PlayInterface.h  RobotCapability.cpp  RobotCapability.h  TrainEnv.cpp  TrainEnv.h  WorldDefine.h  WorldModel.cpp  WorldModel.h  WorldModel_basic.cpp
Core/tactics/: PlayConfig.lua.template  PlayConfigTemplate.lua  task.lua.template
Core/tactics/play/: RunMilitaryBoxing.lua  TestBenchmark_Acc.lua  TestDribbleAndKick.lua  TestGetBall.lua  TestMyRun.lua  TestPassAndKick.lua  TestSubScript.lua
Core/tactics/play/Autoref/: ZJRoboCon2024TC.lua
Core/tactics/play/TC/: README.md  (+3 more)
Core/tactics/skill/: CircleRun.cpp  CircleRun.h  CircleRun.lua  Goalie.cpp  Goalie.h  Touch.cpp  Touch.h  Touch.lua
Core/tt_params/play/: ParamBallDec.lua  ParamPredictTime.lua
(+302 files in other folders)
